--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mongodb": "^2.2.5",
     "mongoose": "^5.1.5",
     "morgan": "^1.9.0",
-    "nodemon": "^1.17.5",
     "underscore": "^1.9.1"
   },
   "devDependencies": {},
