--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
@@ -13,6 +14,10 @@
     "mongodb": "^2.2.5",
     "mongoose": "^5.1.5",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.7",
+    "npm": "^6.1.0",
+    "sendgrid-nodejs": "0.1.0-2",
+    "sendotp": "^1.2.9",
     "underscore": "^1.9.1"
   },
   "devDependencies": {},
